refactor(backend): use Stream.toList() in DTOs
- FormulaireResponse
- FormulaireRecuResponse